# sdl-demo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp  texture.cpp  texture.hpp
